tests/errors/string_slice_oob_panics.ptt
use std/string

spark {
  yell("abc".slice(1, 5))
}
